--- a/test/fixtures/tweets.yml
+++ b/test/fixtures/tweets.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: tweets
+#
+#  id          :bigint           not null, primary key
+#  userName    :string
+#  description :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
 one:
   userNmae: MyString
